--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>ibbi.io</title>
+  <title>ibbi</title>
   <meta name="google-site-verification" content="Jy0Eb07EPwXz4YzwfhA_TRdyul0EUWcpRbzMJ7sZdyQ" />
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
@@ -13,12 +13,20 @@
   
 </head>
 
-<body>
+<body link = "white">
 <!--  <div class= container-fluid> -->
   
   <div class="col-md-12"> 
-    <div class="row pink-background height5">
-      <a href="http://www.ibbi.io">clear screen</a>
+    <div class="row pink-background mainlinks">
+      <div class="col-sm-4">
+        <a href="index.html">clear screen</a>
+      </div>      
+      <div class="col-sm-4">
+        <a href="done.html">things i've done</a>
+      </div>
+      <div class="col-sm-4">
+        <a href="do.html">things i do often</a>
+      </div>
     </div> 
     <div id="justtrash">
         <div class="centered" id="overarch">
