--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <div class="col-md-12"> 
     <div class="row pink-background mainlinks">
       <div class="col-sm-4">
-        <a href="www.ibbi.io">clear screen</a>
+        <a href="./">clear screen</a>
       </div>      
       <div class="col-sm-4">
         <a href="done">things i've done</a>
       </div>
       <div class="col-sm-4">
-        <a href="/do">things i do often</a>
+        <a href="do">things i do often</a>
       </div>
     </div> 
     <div id="justtrash">
