--- a/do.html
+++ b/do.html
@@ -16,13 +16,13 @@
 <body class="pink-background col-md-12">
 	<div class="row mainlinks ">
       <div class="col-sm-4">
-        <a href="index.html">home</a>
+        <a href="./">home</a>
       </div>      
       <div class="col-sm-4">
-        <a href="done.html">things i've done</a>
+        <a href="done">things i've done</a>
       </div>
       <div class="col-sm-4">
-        <a href="do.html">things i do often</a>
+        <a href="do">things i do often</a>
       </div>
     </div> 
 
