--- a/do.html
+++ b/do.html
@@ -28,19 +28,19 @@
 
 	<h3>make</h3>
 	<p>
-		I am interested in the creation process from idea inception to design and prototyping all the way through to manufacturing. I try to create things whenever I get the time, ranging from random arduino gadgets to things like this website.
+		I am interested in the creation process from idea inception to design and prototyping all the way through to initial production. I try to create things whenever I get the time, ranging from random arduino gadgets and webapps to drawings and sculptures.
 	</p>
 	<h3>eat</h3>
 	<p>
-		I prepare 3 litres of the exact nutrition I require for the day every morning, and drink it throughout the day. I only really eat solid food socially, or when I feel like it (rare). I really think this is the holy grail of food solutions, especially for the average active college student. It allows for seamless nutrition tracking, takes a total of ~15 minutes a day to prepare and consume, is very cheap, and can be made to taste alright.
+		I prepare 3 litres of the exact nutrition I require for the day every morning, and drink it throughout the day. I only really eat solid food socially, or when I feel like it (rare). I really think this is the holy grail of food solutions, especially for the average active college student. It allows for seamless nutrition tracking, takes a total of ~15 minutes a day to prepare and consume, can be carried around/stored very easily, is very cheap, and can be made to taste alright.
 	</p>
 	<h3>train</h3>
 	<p>
-		I powerlift as seriously as possible short of competing consistently. My friend/coach DAWIT does all my programming, and I highly recommend him. The environment I currently train in is better than any training environment I have ever been a part of @umdbarbell. I also box, albeit very casually. This means I hit a bag every once in a while and no longer spar on a regular basis.
+		I powerlift as seriously as possible short of competing consistently. My friend/coach <a href="https://www.facebook.com/dawit.girma.581" target="_blank"> <b>Dawit</b></a> does all my programming (and does it really well). The environment I currently train in is better than any training environment I have ever been a part of <a href="http://umdbarbell.strikingly.com/" target="_blank"><b>umd's barbell club.</b></a> I also box, albeit very casually. This means I hit a bag/mitts every week and no longer spar on a regular basis.
 	</p>
 	<h3>school</h3>
 	<p>
-		After changing my major 5 times over the course of 4 years at the University of Maryland, I finally settled with Information Science as perfect for me. It provides a relatively low workload (allowing me to focus on side projects and not end up forgetting about midterms) while managing to remain relevant to all my work interests, meaning I should be able to work in the US on my student visa for up to 3 years after graduating.
+		After changing my major 5 times over the course of 4 years at the University of Maryland, I finally settled with Information Science as perfect for me. It provides a relatively low workload (allowing me to focus on side projects and not end up forgetting about midterms) while managing to remain relevant to all my work interests. This means I should be able to work in the US on my student visa for up to 3 years after graduating doing things I am interested in.
 	</p>
 
 
