--- a/done.html
+++ b/done.html
@@ -27,35 +27,35 @@
     </div> 
 	<h3>IGCSE biology notes</h3>
 	<p>
-		When I was a month away from my IGCSE exams, and freaking out about the fact that I didn't have access to an exhaustive (but not excessive) biology textbook made for this exact examination like I did for my other 7 subjects, I ended up writing one. It ended up being responsible for several As and A*s; as well as several thousand downloads on xtremepapers.com
+		When I was a month away from my IGCSE exams, and freaking out about the fact that I didn't have access to an exhaustive (but not excessive) biology textbook made for this exact examination like I did for my other 7 subjects, I ended up writing one. It ended up being responsible for several As and A*s; as well as several thousand downloads on <a href="https://www.xtremepapers.com/community/members/jivifidi.5596/" target="_blank"><b>xtremepapers.</b></a>
 	</p>
 	<h3>self portrait</h3>
 	<p>
-		The most time I've ever spent on a single drawing. A (very close to) life size self portrait of me doing a handstand seperated into 4 panels and multiple mediums. My friend Alex and I pulled an all nighter together to draw our respective self portraits, and it was lots of fun.
+		The most time I've ever spent on a single drawing. A (very close to) life size <a href="https://photos.app.goo.gl/W3e6rP56cWz3g49O2" target="_blank"><b>self portrait</b></a> of me doing a handstand seperated into 4 panels and multiple mediums. My friend Alex and I pulled an all nighter together to draw our respective self portraits, and it was lots of fun.
 	</p>
 	<h3>collider remake</h3>
 	<p>
-		Collider was a makerspace entirely founded and run by students, and many of us felt it was not getting the attention it deserved. The effort started with me and some friends building an ~8 foot tall lighthouse with our branding to advertise the space (stayed on the campus mall for over a week before it rained), and ended with me leading two mini teams of designers and hackers to entirely rennovate the space over the course of a semester to make it more exciting. Pictures can be found HERE.
+		<a href="http://collider.org" target="_blank"><b>Collider</b></a> is a makerspace entirely founded and run by students, and many of us felt it was not getting the attention it deserved. The effort started with me and some friends building an ~8 foot tall <a href="https://imgur.com/a/8QtRe" target="_blank"><b>lighthouse</b></a> with our branding to advertise the space, and ended with me leading two mini teams of designers and hackers to entirely <a href=" https://photos.app.goo.gl/dQnZZX6c6p51bDGG2" target="_blank"><b>renovate</b></a> the space over the course of a semester to make it more <a href="https://www.facebook.com/1394658304117323/photos/?tab=album&album_id=1820519398197876" target="_blank"><b>exciting.</b></a>
 	</p>
 	
 	<h3>proats</h3>
 	<p>
-		A year after mixing my own food replacement shakes, I realized nobody was selling custom meal replacements, only cookie cutter caloric profiles. I began doing this, and sold around 4,000 day-pouches to around 45 customers before realizing I don't particularily enjoy spending hours every week mixing powders. I also was legally required to incorporate after the 12 month mark, which was not an option on my student visa.
+		After a year of mixing my <a href="https://www.completefoods.co/diy/recipes/variant-8" target="_blank"><b>own</b></a> meal replacement shakes, I realized the nobody in the meal replacement market was selling personalized food (nutritionally catered to the customer in question). I began doing this, and sold around 4,000 day-pouches to around 45 different customers before realizing I don't particularily enjoy spending hours every week mixing powders. I also was legally required to incorporate after the 12 month mark, which was not an option on my student visa.
 	</p>
 	<h3>terrapin hackers</h3>
 	<p>
-		Initially started out organizing bus trips to hackathons for the club (and getting to know lots of cool hackathon organizers on the way) as well as organizing hacktorials. I then transitioned into running our makerspace, collider. Finally, I spent a semester as president before removing myself from the organization team.
+		<a href="http://terrapinhackers.com/" target="_blank"><b>The UMD hacker collective</b></a>  Initially started out organizing bus trips to hackathons for the club (and getting to know lots of cool hackathon organizers on the way) as well as organizing hacktorials. I then transitioned into running our makerspace, collider. Finally, I spent a semester as president before removing myself from the organization team.
 	</p>
 	<h3>hackathons</h3>
 	<p>
-		I (used to) go to collegiate hackathons every few weekends, and almost always made something silly (but fun). The most recent one was HoyaHacks at Georgetown, where some friends and I made a table top maze to be navigated using a little arduino-car. The car recieved signals from a Myo arm band (controlled by hand gestures), and streamed its POV to the driver's VR headset.
+		I (used to) go to collegiate hackathons every few weekends, and almost always made something silly (but fun). The most <a href="https://devpost.com/software/vroom-vroom" target="_blank"><b>recent</b></a> one was HoyaHacks at Georgetown, where some friends and I made a table top maze to be navigated using a little arduino-car. The car recieved signals from a Myo arm band (controlled by hand gestures), and streamed its POV to the driver's VR headset.
 	</p>
 	<h3>mentoring</h3>
 	<p>
-		I think teaching is lots of fun; something I realized after my brother and I spent a summer teaching a class of kids in Kashmir how to use computers. In college, I've mentored at several hackathons and run many intro to hardware workshops/hacktorials for Terrapin Hackers. I think teaching introductory courses/workshops can be so much more special than more specific or advanced things, because you are trying to inspire people to begin a journey.
+		I think teaching is lots of fun; something I realized after my brother and I spent a summer teaching a class of kids in Kashmir how to use computers. In college, I've mentored at several hackathons and run many intro to hardware workshops/hacktorials for Terrapin Hackers. I think teaching introductory courses/workshops can be so much more special than more specific or advanced topics, because you are trying to inspire people to begin a journey.
 	</p>
-	<h3>lifting.io (in progress)</h3>
+	<h3>routinegen (not yet done)</h3>
 	<p>
-		Website that dynamically generates a workout routine based on what the user is trying to improve. 
+		<a href="https://github.com/ibbi/routinegen" target= "_blank"> <b>Website</b></a> that dynamically generates a workout routine based on what the user is trying to improve. 
 	</p>
 </body>
