--- a/do.html
+++ b/do.html
@@ -15,13 +15,13 @@
 
 <body class="pink-background col-md-12">
 	<div class="row mainlinks ">
-      <div class="col-sm-4">
+      <div class="col-xs-4">
         <a href="./">home</a>
       </div>      
-      <div class="col-sm-4">
+      <div class="col-xs-4">
         <a href="done">things i've done</a>
       </div>
-      <div class="col-sm-4">
+      <div class="col-xs-4">
         <a href="do">things i do often</a>
       </div>
     </div> 
