--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   
   <div class="col-md-12"> 
     <div class="row pink-background mainlinks">
-      <div class="col-sm-4">
+      <div class="col-xs-4">
         <a href="./">clear screen</a>
       </div>      
-      <div class="col-sm-4">
+      <div class="col-xs-4">
         <a href="done">things i've done</a>
       </div>
-      <div class="col-sm-4">
+      <div class="col-xs-4">
         <a href="do">things i do often</a>
       </div>
     </div> 
