--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
   <div class="col-md-12"> 
     <div class="row pink-background mainlinks">
       <div class="col-xs-4">
-        <a href="./">clear screen</a>
+        <a href="./">clear screen</a>  | |
+        <a href="https://imgur.com/a/3sFVY" target='_blank'> gallery </a>
       </div>      
       <div class="col-xs-4">
-        <a href="done">things i've done</a>
+        <a href="done">some things i've done</a>
       </div>
       <div class="col-xs-4">
         <a href="do">things i do often</a>
@@ -84,7 +85,7 @@
       context = canvas.getContext("2d");
 
       baldObj.onload = function () {
-      context.drawImage(baldObj, (canvasWidth/2) - (canvasHeight/3.6), (canvasHeight/2) - (canvasHeight/2.4) , (canvasHeight/1.8), (canvasHeight/1.2));
+      context.drawImage(baldObj, (canvasWidth/2) - (canvasHeight/4.2), (canvasHeight/2) - (canvasHeight/2.8) , (canvasHeight/2.1), (canvasHeight/1.4));
 
     }
           baldObj.src = "images/watermelon-duck-outline1.png";
