--- a/done.html
+++ b/done.html
@@ -19,7 +19,7 @@
         <a href="./">home</a>
       </div>      
       <div class="col-xs-4">
-        <a href="done">things i've done</a>
+        <a href="done">some things i've done</a>
       </div>
       <div class="col-xs-4">
         <a href="do">things i do often</a>
