--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     gtag('config', 'UA-111241188-1');
   </script>
-
+  <script src="http://code.jquery.com/jquery.min.js"></script>
   <meta charset="UTF-8">
   <title>ibbi</title>
   <meta name="google-site-verification" content="Jy0Eb07EPwXz4YzwfhA_TRdyul0EUWcpRbzMJ7sZdyQ" />
@@ -30,7 +30,7 @@
     <div class="row pink-background mainlinks">
       <div class="col-xs-4">
         <a href="./">clear screen</a>  | |
-        <a href="https://imgur.com/a/3sFVY" target='_blank'> gallery </a>
+        <a href="https://imgur.com/a/FAFsh" target='_blank'> gallery </a>
       </div>      
       <div class="col-xs-4">
         <a href="done">some things i've done</a>
