update imgur tokens

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="row pink-background mainlinks">
       <div class="col-xs-4">
         <a href="./">clear screen</a>  | |
-        <a href="https://imgur.com/a/FAFsh" target='_blank'> gallery </a>
+        <a href="https://imgur.com/a/WSkGN" target='_blank'> gallery </a>
       </div>      
       <div class="col-xs-4">
         <a href="done">some things i've done</a>
