viewport tags, image comp

--- a/do.html
+++ b/do.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>ibbi</title>
   <meta name="google-site-verification" content="Jy0Eb07EPwXz4YzwfhA_TRdyul0EUWcpRbzMJ7sZdyQ" />
-  
+  <meta name=viewport content="width=device-width, initial-scale=1">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'>
 
@@ -36,7 +36,7 @@
 	</p>
 	<h3>train</h3>
 	<p>
-		I powerlift as seriously as possible short of competing consistently. My friend/coach <a href="https://www.facebook.com/dawit.girma.581" target="_blank"> <b>Dawit</b></a> does all my programming (and does it really well). The environment I currently train in is better than any training environment I have ever been a part of <a href="http://umdbarbell.strikingly.com/" target="_blank"><b>umd's barbell club.</b></a> I also box, albeit very casually. This means I hit a bag/mitts every week and no longer spar on a regular basis.
+		I powerlift as seriously as possible short of competing consistently. My friend/coach <a href="https://www.facebook.com/dawit.girma.581" target="_blank"> <b>  <meta name=viewport content="width=device-width, initial-scale=1">Dawit</b></a> does all my programming (and does it really well). The environment I currently train in is better than any training environment I have ever been a part of <a href="http://umdbarbell.strikingly.com/" target="_blank"><b>umd's barbell club.</b></a> I also box, albeit very casually. This means I hit a bag/mitts every week and no longer spar on a regular basis.
 	</p>
 	<h3>school</h3>
 	<p>
