--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta charset="UTF-8">
   <title>ibbi</title>
   <meta name="google-site-verification" content="Jy0Eb07EPwXz4YzwfhA_TRdyul0EUWcpRbzMJ7sZdyQ" />
-  
+  <meta name=viewport content="width=device-width, initial-scale=1">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'>
 
@@ -29,8 +29,8 @@
   <div class="col-md-12"> 
     <div class="row pink-background mainlinks">
       <div class="col-xs-4">
-        <a href="./">clear screen</a>  | |
-        <a href="https://imgur.com/a/WSkGN" target='_blank'> gallery </a>
+        <a href="./">clear screen</a>  ||
+        <a href="https://imgur.com/a/FAFsh" target='_blank'> gallery </a>
       </div>      
       <div class="col-xs-4">
         <a href="done">some things i've done</a>
