--- a/done.html
+++ b/done.html
@@ -13,7 +13,7 @@
   <meta charset="UTF-8">
   <title>ibbi</title>
   <meta name="google-site-verification" content="Jy0Eb07EPwXz4YzwfhA_TRdyul0EUWcpRbzMJ7sZdyQ" />
-  <meta name=viewport content="width=device-width, initial-scale=1">
+  <meta name=viewport content="width=device-width, initial-scale=.6">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'>
 
@@ -22,39 +22,48 @@
   
 </head>
 
-<body  class="pink-background col-md-12">
-    <div class="row mainlinks ">
-      <div class="col-xs-4">
-        <a href="./">home</a>
+<body  class="cyan-background col-md-12">
+    <div class="row mainlinks">
+      <div class="col-xs-4 pink-background">
+        <a href="./">me<span class="blockLink"></span></a>
       </div>      
-      <div class="col-xs-4">
-        <a href="done">some things i've done</a>
+      <div class="col-xs-4 cyan-background">
+        <a href="done">done<span class="blockLink"></span></a>
       </div>
-      <div class="col-xs-4">
-        <a href="do">things i do often</a>
+      <div class="col-xs-4 green-background">
+        <a href="hairy">hairy<span class="blockLink"></span></a>
       </div>
     </div> 
+	<h3>hairy</h3>
+	<p>
+		Allows for<a href="hairy" class="textLink" target="_blank"> haircut drawing</a> on my bald head, to crowd-source great haircut ideas for myself. Just another step on the journey to perfect hair.
+	</p>
+
+	<h3>routinegen (not yet done)</h3>
+	<p>
+		<a href="https://routinegen.com" class="textLink" target="_blank"> Website</a> that dynamically generates a workout routine based on what attribute the user is trying to improve in the immediate future.
+	</p>    
 	
 	<h3>collider remake</h3>
 	<p>
-		<a href="http://collider.org" target="_blank"><b>Collider</b></a> is a makerspace entirely founded and run by students, and many of us felt it was not getting the attention it deserved. The effort started with me and some friends building an ~8 foot tall <a href="https://imgur.com/a/8QtRe" target="_blank"><b>lighthouse</b></a> with our branding to advertise the space, and ended with me leading two mini teams of designers and hackers to entirely <a href=" https://photos.app.goo.gl/dQnZZX6c6p51bDGG2" target="_blank"><b>renovate</b></a> the space over the course of a semester to make it more <a href="https://www.facebook.com/1394658304117323/photos/?tab=album&album_id=1820519398197876" target="_blank"><b>exciting.</b></a>
+		<a href="http://collider.org" class="textLink" target="_blank">Collider</a> is a makerspace entirely founded and run by students, and many of us felt it was not getting the attention it deserved. The effort started with me and some friends building an ~8 foot tall <a href="https://imgur.com/a/8QtRe" class="textLink" target="_blank">lighthouse</a> with our branding to advertise the space, and ended with me leading two mini teams of designers and hackers to entirely <a href=" https://photos.app.goo.gl/dQnZZX6c6p51bDGG2" class="textLink" target="_blank">renovate</a> the space over the course of a semester to make it more <a href="https://www.facebook.com/1394658304117323/photos/?tab=album&album_id=1820519398197876" class="textLink" target="_blank">exciting.</a>
 	</p>
 	
 	<h3>proats</h3>
 	<p>
-		After a year of mixing my <a href="https://www.completefoods.co/diy/recipes/variant-8" target="_blank"><b>own</b></a> meal replacement shakes, I realized the nobody in the meal replacement market was selling personalized food (nutritionally catered to the customer in question). I began doing this, and sold around 4,000 day-pouches to around 45 different customers before realizing I don't particularily enjoy spending hours every week mixing powders. I also was legally required to incorporate after the 12 month mark, which was not an option on my student visa.
+		After a year of mixing my <a href="https://www.completefoods.co/diy/recipes/variant-8" class="textLink" target="_blank">own</a> meal replacement shakes, I realized the nobody in the meal replacement market was selling personalized food (nutritionally catered to the customer in question). I began doing this, and sold around 4,000 day-pouches to around 45 different customers before realizing I don't particularily enjoy spending hours every week mixing powders. I also was legally required to incorporate after the 12 month mark, which was not an option on my student visa.
 	</p>
 	<h3>terrapin hackers</h3>
 	<p>
-		<a href="http://terrapinhackers.com/" target="_blank"><b>The UMD hacker collective</b></a>  Initially started out organizing bus trips to hackathons for the club (and getting to know lots of cool hackathon organizers on the way) as well as organizing hacktorials. I then transitioned into running our makerspace, collider. Finally, I spent a semester as president before removing myself from the organization team.
+		<a href="http://terrapinhackers.com/" class="textLink" target="_blank">The UMD hacker collective.</a>  Initially started out organizing bus trips to hackathons for the club (and getting to know lots of cool hackathon organizers on the way) as well as organizing hacktorials. I then transitioned into running our makerspace, collider. Finally, I spent a semester as president before removing myself from the organization team.
 	</p>
 	<h3>hackathons</h3>
 	<p>
-		I (used to) go to collegiate hackathons every few weekends, and almost always made something silly (but fun). The most <a href="https://devpost.com/software/vroom-vroom" target="_blank"><b>recent</b></a> one was HoyaHacks at Georgetown, where some friends and I made a table top maze to be navigated using a little arduino-car. The car recieved signals from a Myo arm band (controlled by hand gestures), and streamed its POV to the driver's VR headset.
+		I (used to) go to collegiate hackathons every few weekends, and almost always made something silly (but fun). The most <a href="https://devpost.com/software/vroom-vroom" class="textLink" target="_blank">recent</a> one was HoyaHacks at Georgetown, where some friends and I made a table top maze to be navigated using a little arduino-car. The car recieved signals from a Myo arm band (controlled by hand gestures), and streamed its POV to the driver's VR headset.
 	</p>
 	<h3>self portrait</h3>
 	<p>
-		The most time I've ever spent on a single drawing. A (very close to) life size <a href="https://photos.app.goo.gl/W3e6rP56cWz3g49O2" target="_blank"><b>self portrait</b></a> of me doing a handstand seperated into 4 panels and multiple mediums. My friend Alex and I pulled an all nighter together to draw our respective self portraits, and it was lots of fun.
+		The most time I've ever spent on a single drawing. A (very close to) life size <a href="https://photos.app.goo.gl/W3e6rP56cWz3g49O2" class="textLink" target="_blank">self portrait</a> of me doing a handstand seperated into 4 panels and multiple mediums. My friend Alex and I pulled an all nighter together to draw our respective self portraits, and it was lots of fun.
 	</p>
 	<h3>mentoring</h3>
 	<p>
@@ -62,10 +71,7 @@
 	</p>
 	<h3>IGCSE biology notes</h3>
 	<p>
-		When I was a month away from my IGCSE exams, and freaking out about the fact that I didn't have access to an exhaustive (but not excessive) biology textbook made for this exact examination like I did for my other 7 subjects, I ended up writing one. It ended up being responsible for several As and A*s; as well as several thousand downloads on <a href="https://www.xtremepapers.com/community/members/jivifidi.5596/" target="_blank"><b>xtremepapers.</b></a>
+		When I was a month away from my IGCSE exams, and freaking out about the fact that I didn't have access to an exhaustive (but not excessive) biology textbook made for this exact examination like I did for my other 7 subjects, I ended up writing one. It ended up being responsible for several As and A*s; as well as several thousand downloads on <a href="https://www.xtremepapers.com/community/members/jivifidi.5596/" class="textLink" target="_blank">xtremepapers.</a>
 	</p>
-	<h3>routinegen (not yet done)</h3>
-	<p>
-		<a href="https://github.com/ibbi/routinegen" target= "_blank"> <b>Website</b></a> that dynamically generates a workout routine based on what the user is trying to improve. 
-	</p>
+
 </body>
