--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <img src="images/pyramid.gif" class="center" alt="animation">
   <h3>thanks for stopping by!</h3>
   <p>
-    Check out some things I've <a href="done" class="textLink" target="_blank">done</a>, or draw me a fresh <a href="hairy" class="textLink" target="_blank">haircut</a>.
+    Check out some things I've <a href="done" class="textLink">done</a>, or draw me a fresh <a href="hairy" class="textLink">haircut</a>.
     Feel free to reach out on <a href="https://m.me/ihashme" class="textLink" target="_blank">messenger</a>, send me an <a href="mailto:hi@ibbi.io" class="textLink" target="_blank">email</a>, or download my <a href="resume.pdf" class="textLink" download>resume.</a>
   </p>
 
