--- a/hairy.html
+++ b/hairy.html
@@ -27,13 +27,13 @@
   <div class="container-fluid">
     <div class="row">
       <div class="row mainlinks">
-        <div class="col-xs-4 pink-background">
+        <div class="col-xs-6 pink-background">
           <a href="./">me<span class="blockLink"></span></a>
         </div>      
-        <div class="col-xs-4 cyan-background">
+        <!-- <div class="col-xs-4 cyan-background">
           <a href="done">done<span class="blockLink"></span></a>
-        </div>
-        <div class="col-xs-4 green-background">
+        </div> -->
+        <div class="col-xs-6 green-background">
           <a href="https://imgur.com/a/WSkGN">gallery<span class="blockLink" target="_blank"></span></a>
         </div>
       </div>
