--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <div class="row">
 
       <div class="row mainlinks">
-        <div class="col-xs-4 pink-background">
+        <div class="col-xs-6 pink-background">
           <a href="./">me<span class="blockLink"></span></a>
         </div>      
-        <div class="col-xs-4 cyan-background">
+        <!-- <div class="col-xs-4 cyan-background">
           <a href="done">done<span class="blockLink"></span></a>
-        </div>
-        <div class="col-xs-4 green-background">
-          <a href="hairy">hairy<span class="blockLink"></span></a>
+        </div> -->
+        <div class="col-xs-6 green-background">
+          <a href="hairy">hair<span class="blockLink"></span></a>
         </div>
       </div>
       <div style="text-align: center;">
@@ -43,8 +43,9 @@
       </div>
       <h3>thanks for stopping by!</h3>
       <p>
-        Check out some things I've <a href="done" class="textLink">done</a>, or draw me a fresh <a href="hairy" class="textLink">haircut</a>.
-        Feel free to reach out on <a href="https://m.me/ihashme" class="textLink" target="_blank">messenger</a> or shoot me an <a href="mailto:hi@ibbi.io" class="textLink" target="_blank">email</a>.
+        <!-- Check out some things I've <a href="done" class="textLink">done</a>, or draw me a fresh <a href="hairy" class="textLink">haircut</a>.
+        Feel free to reach out on <a href="https://m.me/ihashme" class="textLink" target="_blank">messenger</a> or shoot me an <a href="mailto:hi@ibbi.io" class="textLink" target="_blank">email</a>. -->
+        i'm in austin right now
       </p>
 
 
