--- a/hairy.html
+++ b/hairy.html
@@ -23,17 +23,17 @@
   
 </head>
 
-<body class="green-background">
+<body class="cyan-background">
   <div class="container-fluid">
     <div class="row">
       <div class="row mainlinks">
         <div class="col-xs-6 pink-background">
-          <a href="./">me<span class="blockLink"></span></a>
+          <a href="./">austin<span class="blockLink"></span></a>
         </div>      
         <!-- <div class="col-xs-4 cyan-background">
           <a href="done">done<span class="blockLink"></span></a>
         </div> -->
-        <div class="col-xs-6 green-background">
+        <div class="col-xs-6 cyan-background">
           <a href="https://imgur.com/a/WSkGN">gallery<span class="blockLink" target="_blank"></span></a>
         </div>
       </div>
