--- a/hairy.html
+++ b/hairy.html
@@ -28,7 +28,7 @@
     <div class="row">
       <div class="row mainlinks">
         <div class="col-xs-6 pink-background">
-          <a href="./">austin<span class="blockLink"></span></a>
+          <a href="./">where<span class="blockLink"></span></a>
         </div>      
         <!-- <div class="col-xs-4 cyan-background">
           <a href="done">done<span class="blockLink"></span></a>
