--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div style="text-align: center">
           <img src="images/pyramid.gif" class="imgcc" alt="animation" />
-          <h1 id="location">dc</h1>
+          <h1 id="location">nyc</h1>
         </div>
         <!-- <h3>thanks for stopping by!</h3> -->
         <p>
