--- a/tribal.html
+++ b/tribal.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Disagreeing poorly</title>
+    <title>Navigating opinions</title>
     <style>
       body {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -13,47 +13,68 @@
     </style>
   </head>
   <body>
-    <strong>Disagreeing poorly</strong>
+    <strong>Navigating opinions</strong>
     <p>
-      As an outsider, it can be painful to watch groups harbor ill-will and talk
-      past each other, succumbing to our worst instincts. As an insider, it
-      hurts to be sorely misunderstood, and feel unheard, and to feel hated. It
-      can feel rewarding, even justified, to return the favor.
+      It can be frustrating to watch an argument as an outsider. It seems
+      obvious where all parties are coming from – why don’t they see it? Often,
+      we find ourselves in one of the parties, feeling attacked, misunderstood,
+      and patronized. Often, we don’t even realize we are returning the favor.
+      They just don’t seem to get it.
       <br />
       <br />
-      I’m from Kashmir. I have many Indian friends. I grew up in Saudi Arabia
-      but became an adult in America, and have a boatload of Arab and Jewish
-      friends. I’ve strongly blah blah should i say this paragraph?<br />
-      <br />It is much easier to identify incorrect opinions than correct ones.
-      If someone says their stock trading strategy is informed by their morning
-      mood, a better trading strategy isn’t required to know theirs is flawed.
+      Trying to identify, short-circuit and avoid unproductive arguments seems
+      more important than ever. 24/7 access to streaming discourse makes for
+      harder to regulate base emotional states.
       <br />
-      <br />Humans like to understand how things work using simplified models
-      built using interactions and intuitions. Most people don’t fully
-      understand how a refrigerator works -– they just understand how it will
-      behave in different situations using their simplified model of it. The
-      model serves its purpose well most of the time, and allows for effective
-      usage of the fridge.
+      <br />When we correctly identify an opinion as poor, we are often asked
+      for our more reasonable stance. If Ben trades stocks based on the phase of
+      the moon, Ben has a stupid trading strategy. I don’t need to have a better
+      strategy to realize this. We should be empowered to discard incoming
+      opinions without having a better one of our own.
+
+      <br />
+      <br />Paying attention to the shared identity (religion, race, gender,
+      ideology) of a group which shares an opinion can help identify bias. In
+      this way, it is also useful to observe what the characteristics of those
+      that you share an opinion with are. If you think Javascript is the best
+      programming language, and so do all your classmates from your Javascript
+      bootcamp – something’s fishy.
+
       <br />
       <br />
-      Simplified models miss a lot of important details, and often make
-      incorrect extrapolations. If Tribe X and Tribe Y are in conflict, members
-      form models of both tribes informed by information around them. When Tribe
-      X acts, the act is seen through different models. Models use shortcuts,
-      fill in blanks, and extrapolate. We are left with very different
-      motivations and interpretations of the same action, and a worsening
-      conflict.
+      Most people don’t actually understand how a fridge works – they thought up
+      a simplified model of a fridge using their interactions with fridges. This
+      model serves its purpose well, and their food stays fresh. Simplified
+      models miss a lot of very important details. When two people disagree
+      about how much energy is wasted keeping the fridge door open for too long,
+      these important details get filled intuitively. Our disputants “get” the
+      fridge. They will disagree strongly. Having successfully used a fridge for
+      decades, surely their model is the correct one? Neither of them have real
+      information on how much energy the fridge spends on cooling the air inside
+      it, and their models give them false confidence.
+
       <br />
-      <br />If an opinion is shared by people with a common prior experience
-      (which informed their model, like race, religion, gender, etc) the model
-      they share is likely biased. Thinking about what priors those who share an
-      opinion have can help identify biases.<br />
+      <br />Many of our opinions form this way as we encounter situations.
+      Finding a way to determine whether an opinion’s source is a quickly filled
+      gap in a simple model helps to discard poor opinions. Did the opinion feel
+      intuitive as soon as it made sense to form it, or do we know why we hold
+      it? Does the person presenting the opinion to you have it because it just
+      “makes sense”, despite being asked for more reasoning?
       <br />
-      Opinions make a lot of sense to those that hold them. If an opinion is
-      labeled dismissively (stupid, evil, etc), the labeler is missing a lot of
-      information and taking lazy shortcuts. Productive discourse is marked with
-      a desire to understand the other point of view. It is also requires all
-      parties to be open to changing their mind.
+      <br />
+      Nobody holds an opinion which doesn’t make sense from their point of view.
+      If you find yourself unable to explain why someone would believe an
+      opinion besides them being stupid or morally corrupt, there is likely
+      important missing information. When we doubt our opponent's mental
+      facilities, so too should we doubt our empathy for their point of view.
+      <br />
+      <br />
+      Disagreements and arguing are pointless if all parties do not come in with
+      a mind willing to change. When we find ourselves repeating the same circle
+      of discourse, we should take another look at how willing everyone is to
+      change their mind. Learning to disengage when we notice another hour of
+      back and forth would lead to the same place is a great way to save an hour
+      of time.
     </p>
   </body>
 </html>
