--- a/tribal.html
+++ b/tribal.html
@@ -16,7 +16,7 @@
     <strong>Navigating opinions</strong>
     <p>
       It can be frustrating to watch an argument as an outsider. It seems
-      obvious where all parties are coming from – why don’t they see it? Often,
+      obvious where all parties are coming from — why don’t they see it? Often,
       we find ourselves in one of the parties, feeling attacked, misunderstood,
       and patronized. Often, we don’t even realize we are returning the favor.
       They just don’t seem to get it.
@@ -38,11 +38,11 @@
       this way, it is also useful to observe what the characteristics of those
       that you share an opinion with are. If you think Javascript is the best
       programming language, and so do all your classmates from your Javascript
-      bootcamp – something’s fishy.
+      bootcamp — something’s fishy.
 
       <br />
       <br />
-      Most people don’t actually understand how a fridge works – they thought up
+      Most people don’t actually understand how a fridge works — they thought up
       a simplified model of a fridge using their interactions with fridges. This
       model serves its purpose well, and their food stays fresh. Simplified
       models miss a lot of very important details. When two people disagree
